--- a/fixtures/pack_cards/atonement/34-treasured-gift.json
+++ b/fixtures/pack_cards/atonement/34-treasured-gift.json
@@ -1,7 +1,7 @@
 {
     "card_id": "34-treasured-gift",
     "flavor_text": "\"What could I ever do to repay such kindness?\"",
-    "illustrator": "Carlos Palma Cruchage",
+    "illustrator": "Carlos Palma Cruchaga",
     "image_url": "http://lcg-cdn.fantasyflightgames.com/l5r/L5C34_130.jpg",
     "pack_id": "atonement",
     "position": "130",
