--- a/composer.json
+++ b/composer.json
@@ -109,6 +109,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^1.11",
+        "phpstan/phpstan-deprecation-rules": "^1.2",
         "phpstan/phpstan-doctrine": "^1.5",
         "phpstan/phpstan-symfony": "^1.4",
         "phpunit/phpunit": "^11",
